/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";

package pulsar.schema;
option java_package = "org.apache.pulsar.broker.transaction.buffer.proto";
option optimize_for = SPEED;

message AbortTxnMetadata {
    optional uint64 txnid_least_bits = 1;
    optional uint64 txnid_most_bits = 2;
    required uint64 ledgerId = 3;
    required uint64 entryId  = 4;
}

message TransactionBufferSnapshot {
    optional string topic_name = 1;
    optional uint64 max_read_position_ledgerId = 2;
    optional uint64 max_read_position_entryId = 3;
    repeated AbortTxnMetadata abort_txn_metadata = 4;
}
